# dtmc

./: LICENSE  NUMERICS.md  README.md  dtmc.cabal
.github/workflows/: ci.yml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.3/: dtmc-0.1.0.0-inplace.conf  package.cache
docs/: DECISIONS.md  DESIGN_LEDGER.md  TESTING.md
src/: Dtmc.hs
src/Dtmc/: Approx.hs  Classification.hs  Distribution.hs  Dynamics.hs  Errors.hs  Hitting.hs  Internal.hs  Kernel.hs  ProbabilityVector.hs  Simplex.hs  Simulation.hs  StochErr.hs  Stochastic.hs  StochasticMatrix.hs  TransitionMatrix.hs  ValidationError.hs
src/Dtmc/Internal/: Block.hs  Graph.hs  Simplex.hs  Types.hs
test/: Spec.hs
test/Dtmc/: ApproxSpec.hs  ClassificationSpec.hs  DistributionSpec.hs  DynamicsSpec.hs  Generators.hs  HittingSpec.hs  KernelSpec.hs  SimplexSpec.hs  SimulationSpec.hs  StochasticMatrixSpec.hs  StochasticSpec.hs  TestSupport.hs  TransitionMatrixSpec.hs
