cabal-version:      3.0
name:               dtmc
version:            0.1.0.0
synopsis:           Type-safe discrete-time Markov chains
description:
  Finite discrete-time Markov chains with type-level dimensions,
  validated probability distributions and transition matrices,
  and deterministic-testable simulation primitives.
category:           Math, Probability
homepage:           https://github.com/kholmetskii/dtmc
bug-reports:        https://github.com/kholmetskii/dtmc/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Arkadii Kholmetskii
maintainer:         Arkadii Kholmetskii <373321aa@gmail.com>
build-type:         Simple
tested-with:        GHC ==9.10.3
extra-doc-files:    README.md

common lang
  default-language: GHC2021

  default-extensions:
      DataKinds
    , RoleAnnotations

  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-uni-patterns
      -Wredundant-constraints

library
  import:           lang
  hs-source-dirs:   src

  exposed-modules:
      Dtmc
      Dtmc.Approx
      Dtmc.Distribution
      Dtmc.TransitionMatrix
      Dtmc.Simulation
      Dtmc.Dynamics
      Dtmc.Classification
      Dtmc.Hitting

  other-modules:
      Dtmc.Internal.Types
      Dtmc.Internal.Simplex
      Dtmc.Internal.Graph
      Dtmc.Internal.Block

  build-depends:
      base >=4.20 && <5
    , array
    , finite-typelits
    , hmatrix >=0.20
    , mwc-random
    , primitive

test-suite spec
  import:           lang
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs

  other-modules:
      Dtmc.ApproxSpec
      Dtmc.DistributionSpec
      Dtmc.TransitionMatrixSpec
      Dtmc.SimulationSpec
      Dtmc.DynamicsSpec
      Dtmc.ClassificationSpec
      Dtmc.HittingSpec
      Dtmc.TestSupport

  build-depends:
      base >=4.20 && <5
    , dtmc
    , finite-typelits
    , hmatrix
    , hspec
    , mwc-random
    , QuickCheck

  build-tool-depends:
      hspec-discover:hspec-discover
